fix: list alignment for mobile screens

--- a/_sass/glitche/layout.scss
+++ b/_sass/glitche/layout.scss
@@ -333,6 +333,7 @@ header {
 			margin: 12px 12px 0 0;
 			@media (max-width: 840px) {
 				width: 48%;
+				display: inline;
 			}
 			@media (max-width: 580px) {
 				width: 100%;
